--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         <div class="glass-card p-8 rounded-2xl border-l-4 border-l-blue-500">
                             <span class="lg:hidden text-4xl font-black font-orbitron text-blue-500 block mb-4">2026</span>
                             <div class="flex flex-col">
-                                <div class="record-item font-bold text-blue-300">PD Lab STAR 선정 (2년 연속)</div>
+                                <div class="record-item font-bold text-blue-300text-blue-400 font-bold">PD Lab STAR 선정 (2년 연속)</div>
                                 <div class="record-item">RISE사업 학생참여형 리빙랩 활동 우수상</div>
                                 <div class="record-item">창업전략 시뮬레이션 연합창업캠프 우수상</div>
                                 <div class="record-item">AI로 만드는 우리 대학 이야기 우수상</div>
@@ -233,7 +233,7 @@
                         <div class="glass-card p-8 rounded-2xl border-r-0 lg:border-r-4 lg:border-r-blue-700">
                             <span class="lg:hidden text-4xl font-black font-orbitron text-blue-500 block mb-4">2025</span>
                             <div class="flex flex-col">
-                                <div class="record-item lg:text-right">PD Lab STAR 최초 선정</div>
+                                <div class="record-item lg:text-right text-blue-400 font-bold">PD Lab STAR 최초 선정</div>
                                 <div class="record-item lg:text-right">2025 동양미래대 EXPO(제43회 졸업작품 전시회) 우수상</div>
                                 <div class="record-item lg:text-right">2025 학생창업주간 AX START UP 우수상</div>
                                 <div class="record-item lg:text-right">2025 호남IS해커톤 우수상</div>
@@ -259,9 +259,9 @@
                         <div class="glass-card p-8 rounded-2xl border-l-4 border-l-blue-900">
                             <span class="lg:hidden text-4xl font-black font-orbitron text-blue-500 block mb-4">2024</span>
                             <div class="flex flex-col space-y-1">
-                                <div class="record-item">2024 동양미래대 EXPO(제43회 졸업작품 전시회) 대상</div>
+                                <div class="record-item text-blue-400 font-bold">2024 동양미래대 EXPO(제43회 졸업작품 전시회) 대상</div>
                                 <div class="record-item">2024 DIGI-STAR PROGRAM IN JEJU 경진대회 대상</div>
-                                <div class="record-item text-blue-400 font-bold">2024 스마트SW 개발 경진대회 최우수상</div>
+                                <div class="record-item ">2024 스마트SW 개발 경진대회 최우수상</div>
                                 <div class="record-item">2024 산학연협력 EXPO 부산 벡스코 작품전시</div>
                                 <div class="record-item">2024 KES2024(한국전자전) 서울 코엑스 작품전시</div>
                                 <div class="record-item">2024 NEXTGEN STARTUP 창업캠프 미니 경진대회 우수상</div>
