chore: add 2025 awards (deduped)

--- a/index.html
+++ b/index.html
@@ -236,10 +236,20 @@
                                 <div class="record-item lg:text-right text-blue-400 font-bold">PD Lab STAR 최초 선정</div>
                                 <div class="record-item lg:text-right">2025 동양미래대 EXPO(제43회 졸업작품 전시회) 우수상</div>
                                 <div class="record-item lg:text-right">2025 학생창업주간 AX START UP 우수상</div>
-                                <div class="record-item lg:text-right">2025 호남IS해커톤 우수상</div>
                                 <div class="record-item lg:text-right">2025 한국컴퓨터종합학술대회 논문전시</div>
                                 <div class="record-item lg:text-right">2025 지산학 한마당 GVALLEY 작품전시</div>
                                 <div class="record-item lg:text-right">2025 KES2024(한국전자전) 서울 코엑스 작품전시</div>
+                                <div class="record-item lg:text-right">2025 Dig-STAR Program in JEJU: 대상</div>
+                                <div class="record-item lg:text-right">2025 달서 전국 대학생 AI 활용 아이디어 콘테스트: 입선</div>
+                                <div class="record-item lg:text-right">2025 한이음 드림업 (ICT 멘토링) 공모전</div>
+                                <div class="record-item lg:text-right">2025 교육장비 개발 및 아이디어 경진대회: 동상</div>
+                                <div class="record-item lg:text-right">2025 Digtech 캡스톤디자인 경진대회: ABEEK상</div>
+                                <div class="record-item lg:text-right">2025 스마트 제조 AI Agent (본선) 해커톤: 2등</div>
+                                <div class="record-item lg:text-right">2025 스마트 SW 개발 경진대회: 최우수상, 우수상</div>
+                                <div class="record-item lg:text-right">2025 생성형 AI 개발 활용 실무 개발 경진대회: 우수상</div>
+                                <div class="record-item lg:text-right">2025 로컬잇슈! 창업캠프 미니 경진대회: 최우수상</div>
+                                <div class="record-item lg:text-right">2025 머신러닝·딥러닝 경진대회: 장려상</div>
+                                <div class="record-item lg:text-right">2025 솜커톤 2기: 최우수상, 우수상</div>
                             </div>
                         </div>
                     </div>
