--- a/index.html
+++ b/index.html
@@ -116,6 +116,32 @@
         @media (max-width: 1024px) {
             .timeline-container::before { left: 20px; transform: none; }
         }
+
+        /* Mobile-specific tweaks */
+        @media (max-width: 640px) {
+            section { padding: 48px 12px; }
+
+            .glass-card { padding: 1rem; }
+
+            .record-item {
+                font-size: 0.82rem;
+                padding: 10px 14px;
+                margin-bottom: 8px;
+                word-break: break-word;
+            }
+
+            .record-item:hover {
+                transform: none;
+                background: rgba(59, 130, 246, 0.08);
+            }
+
+            /* make the timeline line and dots fit small screens */
+            .timeline-container::before { left: 12px; }
+            .z-20.w-10.h-10 { width: 36px; height: 36px; }
+
+            /* scale down large decorative year text on small screens */
+            .text-6xl { font-size: 2.25rem; }
+        }
     </style>
 </head>
 <body>
