--- a/index.html
+++ b/index.html
@@ -142,6 +142,36 @@
             /* scale down large decorative year text on small screens */
             .text-6xl { font-size: 2.25rem; }
         }
+
+        /* Fluid / responsive typography (reduces wrapping on small screens) */
+        :root {
+            --fluid-p-small: clamp(0.85rem, 1.2vw + 0.6rem, 1rem);
+            --fluid-p: clamp(0.95rem, 1.6vw + 0.6rem, 1.125rem);
+            --fluid-lg: clamp(1.125rem, 2.2vw + 0.6rem, 1.5rem);
+            --fluid-xl: clamp(1.5rem, 4vw + 0.6rem, 3.5rem);
+            --fluid-hero: clamp(2.25rem, 8vw + 1rem, 6rem);
+        }
+
+        /* base scaling */
+        html { font-size: 16px; }
+        body { font-size: var(--fluid-p); }
+
+        /* hero and headings scale smoothly */
+        .hero-text { font-size: var(--fluid-hero); line-height: 1.05; }
+        .text-6xl { font-size: clamp(2.5rem, 9vw + 0.5rem, 6rem); }
+        .text-5xl { font-size: clamp(2rem, 6vw + 0.5rem, 4rem); }
+        .text-4xl { font-size: clamp(1.5rem, 4vw + 0.5rem, 2.5rem); }
+
+        /* paragraphs and smaller text */
+        p, .record-item, .text-base, .text-lg, .text-sm {
+            font-size: clamp(0.9rem, 1.6vw + 0.4rem, 1.125rem);
+        }
+
+        /* tweak some controls on very small screens */
+        @media (max-width: 640px) {
+            .hero-text { line-height: 1.08; }
+            .apply-btn { padding: 0.9rem 1.2rem; font-size: clamp(1rem, 3.5vw + 0.5rem, 1.25rem); }
+        }
     </style>
 </head>
 <body>
