지원하기 버튼 화면 오버플로우 수정 - 고정값 클래스 제거 및 최대 너비 제약 추가

--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
             transition: 0.3s;
             position: relative;
             overflow: hidden;
+            font-size: clamp(0.95rem, 2.5vw, 1.5rem);
+            padding: clamp(0.7rem, 1.2vw, 1.5rem) clamp(1rem, 3vw, 2.5rem);
+            white-space: nowrap;
+            display: inline-block;
+            max-width: calc(100% - 32px);
         }
 
         .apply-btn:hover {
@@ -170,7 +175,10 @@
         /* tweak some controls on very small screens */
         @media (max-width: 640px) {
             .hero-text { line-height: 1.08; }
-            .apply-btn { padding: 0.9rem 1.2rem; font-size: clamp(1rem, 3.5vw + 0.5rem, 1.25rem); }
+            .apply-btn { 
+                padding: 0.7rem 1rem;
+                font-size: 0.95rem;
+            }
         }
     </style>
 </head>
@@ -408,7 +416,7 @@
             </div>
 
             <div class="text-center">
-                <a href="https://forms.gle/6fJZX63MJb1kG9Pn7" target="_blank" class="apply-btn inline-block px-16 py-6 rounded-2xl font-black text-2xl shadow-2xl shadow-blue-600/40">
+                <a href="https://forms.gle/6fJZX63MJb1kG9Pn7" target="_blank" class="apply-btn inline-block rounded-2xl font-black shadow-2xl shadow-blue-600/40">
                     지금 바로 지원하기
                 </a>
                 <p class="mt-6 text-gray-500 text-sm italic">문의: 회장 (010-8537-2259)</p>
