--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
             transition: 0.3s;
             position: relative;
             overflow: hidden;
-            font-size: clamp(0.95rem, 2.5vw, 1.5rem);
-            padding: clamp(0.7rem, 1.2vw, 1.5rem) clamp(1rem, 3vw, 2.5rem);
+            font-size: clamp(1.1rem, 3.5vw + 0.2rem, 1.5rem);
+            padding: clamp(1rem, 1.8vw + 0.5rem, 1.5rem) clamp(1.5rem, 4vw + 0.5rem, 2.5rem);
             white-space: nowrap;
             display: inline-block;
             max-width: calc(100% - 32px);
