지원 폼 링크 및 버튼 스타일 업데이트

--- a/index.html
+++ b/index.html
@@ -416,9 +416,9 @@
             </div>
 
             <div class="text-center">
-                <a href="https://forms.gle/6fJZX63MJb1kG9Pn7" target="_blank" class="apply-btn inline-block rounded-2xl font-black shadow-2xl shadow-blue-600/40">
-                    지금 바로 지원하기
-                </a>
+                <a href="https://smore.im/form/bq4xsUvMFq" target="_blank" class="apply-btn px-10 py-5 rounded-xl font-black text-lg tracking-tight">
+                    지원하기 </a>
+                
                 <p class="mt-6 text-gray-500 text-sm italic">문의: 회장 (010-8537-2259)</p>
             </div>
         </div>
