--- a/index.html
+++ b/index.html
@@ -273,16 +273,17 @@
                 <!-- Year 2026 -->
                 <div class="mb-24 flex flex-col lg:flex-row items-start lg:items-center justify-between w-full">
                     <div class="hidden lg:block lg:w-4/12 text-right pr-12">
-                        <span class="text-6xl font-black font-orbitron text-blue-500">2026</span>
+                        <span class="text-6xl font-black font-orbitron text-white">2026</span>
                     </div>
                     <div class="z-20 w-10 h-10 rounded-full bg-blue-600 border-4 border-black flex items-center justify-center mb-6 lg:mb-0 ml-[-5px] lg:ml-0">
                         <div class="w-3 h-3 bg-white rounded-full animate-ping"></div>
                     </div>
                     <div class="w-full lg:w-7/12 pl-8 lg:pl-12 text-left">
                         <div class="glass-card p-8 rounded-2xl border-l-4 border-l-blue-500">
-                            <span class="lg:hidden text-4xl font-black font-orbitron text-blue-500 block mb-4">2026</span>
+                            <span class="lg:hidden text-4xl font-black font-orbitron text-white block mb-4">2026</span>
                             <div class="flex flex-col">
-                                <div class="record-item font-bold text-blue-300text-blue-400 font-bold">PD Lab STAR 선정 (2년 연속)</div>
+                                <div class="record-item font-bold text-blue-400 font-bold">PD Lab STAR 선정 (2년 연속)</div>
+                                <div class="record-item">연합동아리 UMC 9기 수료</div>
                                 <div class="record-item">RISE사업 학생참여형 리빙랩 활동 우수상</div>
                                 <div class="record-item">창업전략 시뮬레이션 연합창업캠프 우수상</div>
                                 <div class="record-item">AI로 만드는 우리 대학 이야기 우수상</div>
@@ -295,7 +296,7 @@
                 <div class="mb-24 flex flex-col lg:flex-row items-start lg:items-center justify-between w-full">
                     <div class="w-full lg:w-7/12 lg:pr-12 text-left lg:text-right order-3 lg:order-1 pl-8 lg:pl-0">
                         <div class="glass-card p-8 rounded-2xl border-r-0 lg:border-r-4 lg:border-r-blue-700">
-                            <span class="lg:hidden text-4xl font-black font-orbitron text-blue-500 block mb-4">2025</span>
+                            <span class="lg:hidden text-4xl font-black font-orbitron text-white block mb-4">2025</span>
                             <div class="flex flex-col">
                                 <div class="record-item lg:text-right text-blue-400 font-bold">PD Lab STAR 최초 선정</div>
                                 <div class="record-item lg:text-right">2025 동양미래대 EXPO(제43회 졸업작품 전시회) 우수상</div>
@@ -319,19 +320,19 @@
                     </div>
                     <div class="z-20 w-10 h-10 rounded-full bg-blue-700 border-4 border-black order-1 lg:order-2 mb-6 lg:mb-0 ml-[-5px] lg:ml-0"></div>
                     <div class="hidden lg:block lg:w-4/12 text-left pl-12 order-2 lg:order-3">
-                        <span class="text-6xl font-black font-orbitron text-blue-700 opacity-50">2025</span>
+                        <span class="text-6xl font-black font-orbitron text-white opacity-50">2025</span>
                     </div>
                 </div>
 
                 <!-- Year 2024 -->
                 <div class="mb-20 flex flex-col lg:flex-row items-start lg:items-center justify-between w-full">
                     <div class="hidden lg:block lg:w-4/12 text-right pr-12">
-                        <span class="text-6xl font-black font-orbitron text-blue-900 opacity-40">2024</span>
+                        <span class="text-6xl font-black font-orbitron text-white opacity-40">2024</span>
                     </div>
                     <div class="z-20 w-10 h-10 rounded-full bg-blue-900 border-4 border-black flex items-center justify-center mb-6 lg:mb-0 ml-[-5px] lg:ml-0"></div>
                     <div class="w-full lg:w-7/12 pl-8 lg:pl-12 text-left">
                         <div class="glass-card p-8 rounded-2xl border-l-4 border-l-blue-900">
-                            <span class="lg:hidden text-4xl font-black font-orbitron text-blue-500 block mb-4">2024</span>
+                            <span class="lg:hidden text-4xl font-black font-orbitron text-white block mb-4">2024</span>
                             <div class="flex flex-col space-y-1">
                                 <div class="record-item text-blue-400 font-bold">2024 동양미래대 EXPO(제43회 졸업작품 전시회) 대상</div>
                                 <div class="record-item">2024 DIGI-STAR PROGRAM IN JEJU 경진대회 대상</div>
